# Project2_CBIR

./: CMakeLists.txt  README.md
csv_files/: baseline_feature.csv  extension2_law_filter_texture_feature.csv  spatial_var_feature_2.csv  task2_feature_RG.csv  task3_feature1.csv  task3_feature2.csv  task4_texture_feature.csv  task5_face_texture_feature.csv
include/: feature.h  filter.h
src/: csv_util.cpp  feature.cpp  filter.cpp  hog.cpp  imgDisplay.cpp  main.cpp  spatial_variance.cpp  surf.cpp  test.cpp  train.cpp
